--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- top banner -->
+    <h1> this is my first project</h1>
     <div class="top-banner"></div>
     <nav></nav>
     <header></header>
